--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
     <nav class="navbar is-warning">
       <div class="navbar-brand">
         <%= link_to root_path, class: "navbar-item" do %>
-          <h1 class="title is-4" style="font-family: cursive;">recipegram</h1>
+          <h1 class="title is-4" style="font-family: cursive;">clothes.share</h1>
         <% end %>
         <div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
           <span></span>
@@ -38,17 +38,17 @@
       <% if user_signed_in? %>
         <div id="navbarExampleTransparentExample" class="navbar-menu">
           <div class="navbar-item">
-            <%# <%= link_to "レシピ一覧", recipes_path, class: "navbar-item button is-warning is-light" %> %>
+            <%= link_to "服一覧", recipes_path, class: "navbar-item button is-warning is-light" %>
           </div>
           <div class="navbar-item">
-            <%# <%= link_to "レシピ投稿", new_recipe_path, class: "navbar-item button is-warning is-light" %> %>
+            <%= link_to "服追加", new_recipe_path, class: "navbar-item button is-warning is-light" %>
           </div>
 
           <div class="navbar-end">
             <div class="navbar-item">
               <div class="field is-grouped">
                 <p class="control">
-                  <%= link_to "レシピグラマー一覧", users_path, class: " button is-warning is-light" %>
+                  <%= link_to "メンバー一覧", users_path, class: " button is-warning is-light" %>
                 </p>
                 <p class="control">
                   <%= link_to "マイページ", user_path(current_user), class: "button is-warning is-light" %>
@@ -63,10 +63,10 @@
       <% else %>
         <div id="navbarExampleTransparentExample" class="navbar-menu">
           <div class="navbar-item">
-            <%= link_to "レシピ一覧", recipes_path, class: "navbar-item button is-warning is-light" %>
+            <%= link_to "服一覧", recipes_path, class: "navbar-item button is-warning is-light" %>
           </div>
           <div class="navbar-item">
-            <%= link_to "レシピグラマー一覧", users_path, class: "navbar-item button is-warning is-light" %>
+            <%= link_to "メンバー一覧", users_path, class: "navbar-item button is-warning is-light" %>
           </div>
           <div class="navbar-end">
             <div class="navbar-item">
