--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -2,7 +2,7 @@
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
-        新規レシピ作成
+        新規作成
       </h1>
     </div>
   </div>
@@ -15,12 +15,12 @@
       <div class="column is-6">
         <%= form_for @recipe do |f| %>
           <div class="field">
-            <%= f.label :title, "レシピ名", class: "label" %>
+            <%= f.label :title, "名前", class: "label" %>
             <%= f.text_field :title, class: "input" %>
           </div>
 
           <div class="field">
-            <%= f.label :body, "作り方", class: "label" %>
+            <%= f.label :body, "詳細", class: "label" %>
             <%= f.text_area :body, class: "textarea" %>
           </div>
 
