--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -2,7 +2,7 @@
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
-        レシピ詳細
+        服詳細
       </h1>
     </div>
   </div>
@@ -27,7 +27,7 @@
             <div class="content">
               <table class="table is-narrow">
                 <tr>
-                  <th>レシピ</th>
+                  <th>服</th>
                 </tr>
                 <tr>
                   <td><%= simple_format @recipe.body %></td>
