--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,8 @@
-@@ -1,7 +1,40 @@
 <section class="hero is-success">
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
-        レシピグラマー一覧
+        メンバー一覧
       </h1>
     </div>
   </div>
